# scaleops-feature-flag-mangement

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENCE.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 4d562540f475_create_initial_tables_for_feature_flags_.py  6fa1c750a6bb_drop_the_enum_for_audit_log_action.py
src/: app.py
src/audit_logs/: __init__.py  auditable.py  decorators.py  enums.py  events.py  model.py  repository.py  router.py  schemas.py  service.py
src/common/: context.py  dependencies.py  exceptions.py  settings.py
src/feature_flags/: __init__.py  enums.py  exceptions.py  model.py  repository.py  router.py  schemas.py  service.py
src/infrastructure/: base_repository.py  containers.py  database.py
src/middlewares/: db_session.py
tests/: conftest.py
tests/integration/: test_audit_logs_router.py  test_feature_flags_router.py
